--- a/aws.yaml
+++ b/aws.yaml
@@ -157,7 +157,7 @@ Resources:
           echo "/dev/nvme1n1 /uniondrive ext4 defaults,nofail 0 2" | sudo tee -a /etc/fstab
 
           # Clone the repository
-          git clone https://github.com/functionland/automatic-poolnode-creation-script ~/automatic-poolnode-creation-script
+          git clone https://github.com/functionland/automatic-poolnode-creation-script /home/ubuntu/automatic-poolnode-creation-script
 
           # Run the script with the provided seed parameter
-          bash ~/automatic-poolnode-creation-script/pool_creation.sh --seed ${SeedParameter}
+          bash /home/ubuntu/automatic-poolnode-creation-script/pool_creation.sh --seed ${SeedParameter}
