--- a/aws.yaml
+++ b/aws.yaml
@@ -150,18 +150,16 @@ Resources:
           # Create the mount point directory
           sudo mkdir -p /uniondrive
 
+          sudo chown ubuntu:ubuntu /uniondrive
+
           # Mount the volume
           sudo mount /dev/nvme1n1 /uniondrive
 
           # Add an entry to /etc/fstab to auto-mount the volume on reboot
           echo "/dev/nvme1n1 /uniondrive ext4 defaults,nofail 0 2" | sudo tee -a /etc/fstab
 
-          sudo -u ubuntu bash << 'EOF'
-            # Clone the repository
-            git clone https://github.com/functionland/automatic-poolnode-creation-script /home/ubuntu/automatic-poolnode-creation-script
+          # Clone the repository
+          git clone https://github.com/functionland/automatic-poolnode-creation-script /home/ubuntu/automatic-poolnode-creation-script
 
-            # Run the script with the provided seed parameter
-            bash /home/ubuntu/automatic-poolnode-creation-script/pool_creation.sh --seed ${SeedParameter}
-
-            # Any other commands to be run as ubuntu user
-          EOF
+          # Run the script with the provided seed parameter
+          sudo -u ubuntu bash /home/ubuntu/automatic-poolnode-creation-script/pool_creation.sh --seed ${SeedParameter}
