--- a/aws-validator.yaml
+++ b/aws-validator.yaml
@@ -253,7 +253,7 @@ Resources:
                 (crontab -l 2>/dev/null; echo "0 * * * * /home/ubuntu/check_docker_logs.sh") | crontab -
 
                 # Clone the repository
-                git clone https://github.com/functionland/automatic-poolnode-creation-script /home/ubuntu/
+                git clone https://github.com/functionland/automatic-poolnode-creation-script /home/ubuntu/automatic-poolnode-creation-script
 
                 # Run the script for validator 01
                 sudo -u ubuntu bash /home/ubuntu/automatic-poolnode-creation-script/validator_node.sh --user=ubuntu --password=${ValidatorPassword01} --validator=01 --domain=${Domain01}
