--- a/aws-validator.yaml
+++ b/aws-validator.yaml
@@ -192,6 +192,12 @@ Resources:
           SubnetId: !Ref ValidatorSubnet
           GroupSet:
             - !Ref ValidatorSecurityGroup
+      BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            VolumeSize: 30
+            VolumeType: gp2
+            DeleteOnTermination: true
       UserData:
           Fn::Base64: !Sub |
                 #!/bin/bash
