--- a/aws-validator.yaml
+++ b/aws-validator.yaml
@@ -201,6 +201,7 @@ Resources:
       UserData:
           Fn::Base64: !Sub |
                 #!/bin/bash
+                exec > /var/log/user-data-installation.log 2>&1
                 # Wait for the attached volume to become available
                 while ! sudo lsblk | grep -q nvme1n1; do
                   sleep 1
